Fix: Toast alignment and font size

--- a/client/src/scss/components/_toast.scss
+++ b/client/src/scss/components/_toast.scss
@@ -4,4 +4,13 @@
 .toast {
   font-size: $font-size-small;
   line-height: $line-height-small;
+
+  &__body {
+    align-items: center;
+    color: $color-black;
+  }
+
+  &__content {
+    font-size: 1.3rem;
+  }
 }
